Fix scoreboard gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,5 +17,5 @@ body {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 1rem;
+  gap: 2rem;
 }
